trying out different things

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
   justify-content: center;
   align-items: center;
   width: 75%;
-  background-image: url(./components/Logos/SubCode-logos_black.png);
+  background-image: url(./components/Logos/SubCode-logos.jpeg);
   background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
