--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,31 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Alkatra', cursive;
+  font-family: 'Lato-Regular';
 }
 
 .background {
-  background-color: white;
+  background-color: rgb(170, 170, 162);
 }
 
 .header {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  justify-content: center;
   align-items: center;
-  margin-bottom: 90px;
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 10vh;
+
+}
+
+.logo {
+  width: 5%;
+}
+
+.H-T {
+position: absolute;
+right: 35%;
+font-size: 10vh;
 }
 
 .S-H-1 {
@@ -33,10 +43,7 @@
   justify-content: center;
   align-items: center;
   width: 75%;
-  background-image: url(./components/Logos/SubCode-logos.jpeg);
-  background-repeat: no-repeat;
-background-position: center;
-background-size: cover;
+  background-color: rgb(170, 170, 162);
   height: 100rem;
 
 }
@@ -44,7 +51,8 @@ background-size: cover;
 .F-H-1 {
   background-color: black;
   width: 100%;
-  color: antiquewhite;
+  padding-top: 5%;
+  color: rgb(170, 170, 162);
 }
 
 #footer {
