--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@
 
 .H-T {
 position: absolute;
-right: 35%;
-font-size: 10vh;
+right: 40%;
+
 }
 
 .S-H-1 {
@@ -34,8 +34,11 @@ font-size: 10vh;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+}
 
-
+.Slider-H {
+  width: 60%;
+  margin-top: 5%;
 }
 
 .A-C-1 {
@@ -53,6 +56,23 @@ font-size: 10vh;
   width: 100%;
   padding-top: 5%;
   color: rgb(170, 170, 162);
+}
+
+.each-slide-effect > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 350px;
+}
+
+.each-slide-effect span {
+  padding: 20px;
+  font-size: 20px;
+  background: #efefef;
+  text-align: center;
 }
 
 #footer {
