--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,32 @@
 
 .H-T {
 position: absolute;
-right: 40%;
+right: 47%;
 
+}
+
+.nav-link {
+text-decoration: none;
+color:  white;
+}
+
+ul {
+  list-style-type: none;
+}
+
+
+.nav-tab {
+  margin-bottom: 10px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: black;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+  text-decoration: none;
 }
 
 .S-H-1 {
