--- a/src/App.css
+++ b/src/App.css
@@ -11,46 +11,69 @@
 
 .header {
   display: flex;
+  flex-direction: row;
   align-items: center;
+  width: 100%;
   background-color: black;
   color: white;
   width: 100%;
-  height: 10vh;
-
+  height: 15vh;
 }
+
+@media screen {}
+
+.H-1 {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: fit-content;
+}
+
+.main-header-menu {
+  display: flex;
+  padding-right: 1%;
+}
+
 
 .logo {
-  width: 5%;
+  width: 8vw;
 }
 
-.H-T {
-position: absolute;
-right: 47%;
+.H-T-1 {
+  display: flex;
+  justify-content: center;
+  font-size: 5vw;
+}
 
+.H-T-2 {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5vw;
 }
 
 .nav-link {
-text-decoration: none;
-color:  white;
+  text-decoration: none;
+  color: white;
+}
+
+.nav-link:hover {
+  color: black;
 }
 
 ul {
   list-style-type: none;
+
 }
 
 
 .nav-tab {
-  margin-bottom: 10px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: #fff;
-  background-color: black;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
-  text-decoration: none;
+font-size: 1vw;
+margin-bottom: 0;
+}
+
+.nav-tab:hover {
+  background-color: rgb(170, 170, 162);
+  color: black;
 }
 
 .S-H-1 {
@@ -82,7 +105,7 @@ ul {
   color: rgb(170, 170, 162);
 }
 
-.each-slide-effect > div {
+.each-slide-effect>div {
   display: flex;
   align-items: center;
   justify-content: center;
